add select important

--- a/Note-app/src/assets/scss/main.scss
+++ b/Note-app/src/assets/scss/main.scss
@@ -51,10 +51,10 @@ section, .section {
   @media screen and (max-width: $desktopWidth) {
     padding: 36px 0;
   }
-  @media screen and (max-width: $desktopWidth) {
+  @media screen and (max-width: $tableWidth) {
     padding: 28px 0;
   }
-  @media screen and (max-width: $desktopWidth) {
+  @media screen and (max-width:$phoneWidth) {
     padding: 20px 0;
   }
 }
